because i want to
half way done with 2nd page

--- a/index.html
+++ b/index.html
@@ -11,11 +11,19 @@
 
     <div id="wrapper">
 
-    <header id="hd"><img src="img/NTIZOO.png""></header>
-    <nav id="nv">nav</nav>
-    <section id="s1">sc</section>
-    <section id="s2">sc</section>
-    <footer id="fo">fo</footer>
+    <header id="hd"><img src="img/NTIZOO.png"></header>
+    <nav id="nv">
+        <a id="main" href="index.html">main</a>
+        <a href="workers.html">employees</a>
+        <a href="animals.html">animals</a>
+    </nav>
+    <section id="s1">
+        <div id="main_text">
+            <article>FLAMINGOS!!!!!</article>
+            <img src="img/animals/flamingo.jpeg" alt="flamingo">
+        </div>
+    </section>
+    <footer id="fo"></footer>
 
     </div>
 
