--- a/workers.html
+++ b/workers.html
@@ -20,20 +20,32 @@
         <section id="s1">
             <div id="main_text">
                 <div id="img-1">
-                    <img src="img/animals/flamingo.jpeg" alt="flamingo">
-                    <article><h1>King julien</h1> Employee of the month </article>
+                    <img id="julien" src="img/animals/kung_julien.jpeg" alt="intekungjulien">
+                    <article id="img-1text"><strong> King julien </strong> <strong> Employee of the month</strong> <p>I like to move it, move it
+                        I like to move it, move it
+                        I like to move it, move it
+                        We like to move it!</p></article>
                 </div>
                 <div id="img-2">
-                    <article>FLAMINGOS!!!!!</article>
-                    <img src="img/animals/flamingo.jpeg" alt="flamingo">
+                    <article id="img-2text"><strong> Rango </strong> Here in the Mojave desert, animals
+
+                        have had millions of years to adapt
+                        
+                        to the harsh environment.
+                        
+                        But the lizard, he is going to die.</article>
+                    <img src="img/animals/lizard.jpeg" alt="lizard">
                 </div>
                 <div id="img-3">
-                    <img src="img/animals/flamingo.jpeg" alt="flamingo">
-                    <article>FLAMINGOS!!!!!</article>
+                    <img src="img/animals/panda.jpeg" alt="panda">
+                    <article id="img-3text"><strong> Po </strong>Everybody is Kung Fu fighting (hoo! Huh!)
+                    Your mind becomes fast as lightning
+                    Although the future is a little bit frightening (little bit frightening)
+                    It's the book of your life that you're writing (life that you're writing)</article>
                 </div>
                 <div id="img-4">
-                    <article>FLAMINGOS!!!!!</article>
-                    <img src="img/animals/flamingo.jpeg" alt="flamingo">
+                    <article id="img-4text"><strong> Garfield </strong> <p>he like the lasagne ver much</p></article>
+                    <img src="img/animals/cat.webp" alt="cat">
                 </div>
             </div>
         </section>
