--- a/index.html
+++ b/index.html
@@ -23,7 +23,15 @@
             <img src="img/animals/flamingo.jpeg" alt="flamingo">
         </div>
     </section>
-    <footer id="fo"></footer>
+    <footer id="fo">
+
+        <section id="kontakt"> <h2> Kontakta oss</h2> <p>snälla</p>  <p>kontakta</p> <p>oss</p> <p>inte</p></section>
+
+        <section id="reko"> <h2> rekomenderade länk</h2> <p>"link_to_youtube_never_gonna_give_you_up"</p></section>
+
+        <section id="vem"> <h2> Vem är vi</h2> <p>tre personer i en källare</p> </section>
+
+    </footer>
 
     </div>
 
